# Cell_Genesis_Studio

./: .gitignore  README.md  pyproject.toml
scripts/: build_macos_app.sh
src/celluniverse_napari_app/: __init__.py  audit.py  cli.py  colors.py  geometry.py  initial_state_tool.py  io.py  lineage.py  local_app.py  matching.py  models.py  movie_pipeline.py  napari.yaml  overlays.py  plugin.py  render.py  theme.py  video.py  viewer.py
